--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "sweetalert": "^2.1.2",
         "sweetalert2": "^11.9.0"
     }
 }
